
package edu.hitsz.aircraft;

public interface EnemyFactory {
    Enemy createEnemy();
}